2001-09-13  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (_AS_QUOTE_IFELSE, _AS_BOX_INDIR): Use
	m4_match.
	(m4_re_escape): New.
	* lib/autoconf/status.m4 (AC_CONFIG_IF_MEMBER): Use it.
	* lib/autoconf/general.m4 (AC_CACHE_SAVE): Use m4_match.
	* lib/autoconf/status.m4 (AC_CONFIG_IF_MEMBER, AC_CONFIG_LINKS):
	Likewise.
	* lib/autoconf/types.m4 (_AC_CHECK_TYPE_REPLACEMENT_TYPE_P)
	(_AC_CHECK_TYPE_MAYBE_TYPE_P, AC_CHECK_MEMBER): Likewise.
	* lib/autotest/general.m4 (AT_INIT): Rename AT_TESTS_ALL as
	AT_tests_all for consistency.
	Set at_victims.
	(AT_VICTIMS): Similar to AT_KEYWORDS.
	(_AT_CLEANUP_FILE_IF): Use m4_match and m4_re_escape.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Fix stupid bugs.

	
2001-09-13  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Create and remove
	`$as_me.[0-9]+' instead of `debug-[0-9]+.sh', so that multiple
	test suites can cohabit.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* tests/mktests.sh: Don't output banners for empty test files.

2001-09-13  Akim Demaille  <akim@epita.fr>

	Test suites can be run independently of configure.

	* lib/m4sugar/m4sh.m4 (_AS_ECHO, _AS_ECHO_N_PREPARE): New.
	* lib/autoconf/programs.m4 (_AC_PROG_ECHO): Remove.
	* lib/autoconf/general.m4 (_AC_INIT_PREPARE): Adjust: AC_SUBST
	ECHO_N etc.
	* lib/autoconf/autotest.m4 (AC_CONFIG_TESTDIR): Don't ask for at_n
	and at_c.
	* lib/autotest/general.m4: Use ECHO_*.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* bin/ifnames.in: Rewrite in Perl.
	* configure.ac: Don't look for AWK.
	* tests/tools.at (AWK portability): Remove.
	(Syntax of the shell scripts): Don't check ifnames.
	(AT_CHECK_PERL_SYNTAX): New.
	(Syntax of the Perl scripts): Check ifnames.
	* tests/ifnames: New.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Let --keywords also match
	test group titles.
	* tests/atspecific.m4 (AT_CHECK_AU_MACRO): AT_KEYWORDS(autoupdate).